--- a/כל-ההזמנות.html
+++ b/כל-ההזמנות.html
@@ -1,6 +1,110 @@
-```html:c:\Users\JBH\Downloads\כל ההזמנות סופי (1).html
+<!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GPI - Global Products Industries Connect</title>
+    <!-- טעינת Firebase UMD SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth-compat.js"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap');
+
+        /* Floating profile picture and menu */
+        .profile-container {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        .profile-picture {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            border: 3px solid #3498db;
+            cursor: pointer;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            object-fit: cover;
+        }
+
+        .profile-picture:hover {
+            transform: scale(1.1);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .profile-menu {
+            display: none;
+            position: absolute;
+            bottom: 70px;
+            left: 0;
+            background-color: #ffffff;
+            color: #333333;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            padding: 15px;
+            width: 250px;
+            text-align: center;
+            z-index: 1000;
+        }
+
+        .profile-menu.show {
+            display: block;
+        }
+
+        .profile-menu-header {
+            display: flex;
+            align-items: center;
+            margin-bottom: 15px;
+        }
+
+        .profile-menu-picture {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            margin-right: 10px;
+            object-fit: cover;
+        }
+
+        .profile-menu-name {
+            font-size: 1.2rem;
+            font-weight: bold;
+        }
+
+        .profile-menu-email {
+            font-size: 0.9rem;
+            color: #666;
+            margin-bottom: 15px;
+        }
+
+        .profile-menu-button {
+            background-color: #3498db;
+            color: #ffffff;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            width: 100%;
+            margin-bottom: 10px;
+        }
+
+        .profile-menu-button:hover {
+            background-color: #2980b9;
+        }
+
+        #logout-button {
+            background-color: #e74c3c;
+        }
+
+        #logout-button:hover {
+            background-color: #c0392b;
+        }
+    </style>
+    <base href="https://gpidashboard.com/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>כל ההזמנות - GPI</title>
@@ -9,8 +113,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth-compat.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap');
 
@@ -246,100 +348,6 @@
                 margin-right: 0;
             }
         }
-
-        /* Floating profile picture and menu */
-        .profile-container {
-            position: fixed;
-            bottom: 20px;
-            left: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            z-index: 1000;
-        }
-
-        .profile-picture {
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            border: 3px solid #3498db;
-            cursor: pointer;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            object-fit: cover;
-        }
-
-        .profile-picture:hover {
-            transform: scale(1.1);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-        }
-
-        .profile-menu {
-            display: none;
-            position: absolute;
-            bottom: 70px;
-            left: 0;
-            background-color: #ffffff;
-            color: #333333;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            padding: 15px;
-            width: 250px;
-            text-align: center;
-            z-index: 1000;
-        }
-
-        .profile-menu.show {
-            display: block;
-        }
-
-        .profile-menu-header {
-            display: flex;
-            align-items: center;
-            margin-bottom: 15px;
-        }
-
-        .profile-menu-picture {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            margin-right: 10px;
-            object-fit: cover;
-        }
-
-        .profile-menu-name {
-            font-size: 1.2rem;
-            font-weight: bold;
-        }
-
-        .profile-menu-email {
-            font-size: 0.9rem;
-            color: #666;
-            margin-bottom: 15px;
-        }
-
-        .profile-menu-button {
-            background-color: #3498db;
-            color: #ffffff;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            width: 100%;
-            margin-bottom: 10px;
-        }
-
-        .profile-menu-button:hover {
-            background-color: #2980b9;
-        }
-
-        #logout-button {
-            background-color: #e74c3c;
-        }
-
-        #logout-button:hover {
-            background-color: #c0392b;
-        }
     </style>
 </head>
 <body>
@@ -410,6 +418,73 @@
             <button class="profile-menu-button" id="logout-button">התנתק</button>
         </div>
     </div>
+<script>
+    // אתחול Firebase
+    firebase.initializeApp(firebaseConfig);
+
+    const auth = firebase.auth();
+
+    // רשימת האימיילים המורשים
+    const allowedEmails = ["dovgotesman1@gmail.com", "zevi1706@gmail.com", "m0534575029@gmail.com"];
+
+    // פונקציה לבדוק אם המשתמש מחובר ואם האימייל שלו מורשה
+    auth.onAuthStateChanged(user => {
+        if (!user || !allowedEmails.includes(user.email)) {
+            // אם המשתמש לא מחובר או שהאימייל שלו לא מורשה, הפנה אותו לדף ה-Index
+            window.location.href = "index.html";
+        } else {
+            // אם המשתמש מחובר ואימיילו מורשה, עדכן את תמונת הפרופיל ופרטי המשתמש
+            const profilePicture = document.getElementById('profile-picture');
+            const profileMenuPicture = document.getElementById('profile-menu-picture');
+            const profileMenuName = document.getElementById('profile-menu-name');
+            const profileMenuEmail = document.getElementById('profile-menu-email');
+
+            profilePicture.src = user.photoURL || 'default-profile.png';
+            profileMenuPicture.src = user.photoURL || 'default-profile.png';
+            profileMenuName.textContent = user.displayName || 'משתמש';
+            profileMenuEmail.textContent = user.email || '';
+        }
+    });
+
+    // טיפול בלחיצה על תמונת הפרופיל
+    document.getElementById('profile-picture').addEventListener('click', () => {
+        document.getElementById('profile-menu').classList.toggle('show');
+    });
+
+    // סגירת התפריט בלחיצה מחוץ לאזור התפריט
+    document.addEventListener('click', (event) => {
+        const profileMenu = document.getElementById('profile-menu');
+        const profilePicture = document.getElementById('profile-picture');
+        if (!profileMenu.contains(event.target) && event.target !== profilePicture) {
+            profileMenu.classList.remove('show');
+        }
+    });
+
+    // פונקציות לכפתורי התפריט
+    document.getElementById('profile-button').addEventListener('click', () => {
+        console.log('עבור לדף הפרופיל');
+        // הוסף כאן את הקוד לניווט לדף הפרופיל
+    });
+
+    document.getElementById('orders-button').addEventListener('click', () => {
+        console.log('עבור לדף ההזמנות');
+        // הוסף כאן את הקוד לניווט לדף ההזמנות
+    });
+
+    document.getElementById('settings-button').addEventListener('click', () => {
+        console.log('עבור לדף ההגדרות');
+        // הוסף כאן את הקוד לניווט לדף ההגדרות
+    });
+
+    // פונקציה להתנתקות
+    document.getElementById('logout-button').addEventListener('click', () => {
+        auth.signOut().then(() => {
+            window.location.href = "index.html";
+        }).catch((error) => {
+            console.error("שגיאה בהתנתקות:", error);
+        });
+    });
+</script>
 
     <script>
         // Firebase configuration
@@ -522,7 +597,6 @@
                         doc.setFont("helvetica", "bold");
                         doc.text(`${key}:`, 20, yPosition);
                         yPosition += 10;
-                        
                         doc.setFont("helvetica", "normal");
                         for (let subKey in data[key]) {
                             doc.text(`${subKey}: ${data[key][subKey]}`, 30, yPosition);
@@ -615,70 +689,6 @@
 
         // Load data when the page loads
         window.onload = loadData;
-
-        // Firebase authentication
-        const auth = firebase.auth();
-
-        // רשימת האימיילים המורשים
-        const allowedEmails = ["dovgotesman1@gmail.com", "zevi1706@gmail.com", "m0534575029@gmail.com"];
-
-        // פונקציה לבדוק אם המשתמש מחובר ואם האימייל שלו מורשה
-        auth.onAuthStateChanged(user => {
-            if (!user || !allowedEmails.includes(user.email)) {
-                // אם המשתמש לא מחובר או שהאימייל שלו לא מורשה, הפנה אותו לדף ה-Index
-                window.location.href = "index.html";
-            } else {
-                // אם המשתמש מחובר ואימיילו מורשה, עדכן את תמונת הפרופיל ופרטי המשתמש
-                const profilePicture = document.getElementById('profile-picture');
-                const profileMenuPicture = document.getElementById('profile-menu-picture');
-                const profileMenuName = document.getElementById('profile-menu-name');
-                const profileMenuEmail = document.getElementById('profile-menu-email');
-
-                profilePicture.src = user.photoURL || 'default-profile.png';
-                profileMenuPicture.src = user.photoURL || 'default-profile.png';
-                profileMenuName.textContent = user.displayName || 'משתמש';
-                profileMenuEmail.textContent = user.email || '';
-            }
-        });
-
-        // טיפול בלחיצה על תמונת הפרופיל
-        document.getElementById('profile-picture').addEventListener('click', () => {
-            document.getElementById('profile-menu').classList.toggle('show');
-        });
-
-        // סגירת התפריט בלחיצה מחוץ לאזור התפריט
-        document.addEventListener('click', (event) => {
-            const profileMenu = document.getElementById('profile-menu');
-            const profilePicture = document.getElementById('profile-picture');
-            if (!profileMenu.contains(event.target) && event.target !== profilePicture) {
-                profileMenu.classList.remove('show');
-            }
-        });
-
-        // פונקציות לכפתורי התפריט
-        document.getElementById('profile-button').addEventListener('click', () => {
-            console.log('עבור לדף הפרופיל');
-            // הוסף כאן את הקוד לניווט לדף הפרופיל
-        });
-
-        document.getElementById('orders-button').addEventListener('click', () => {
-            console.log('עבור לדף ההזמנות');
-            // הוסף כאן את הקוד לניווט לדף ההזמנות
-        });
-
-        document.getElementById('settings-button').addEventListener('click', () => {
-            console.log('עבור לדף ההגדרות');
-            // הוסף כאן את הקוד לניווט לדף ההגדרות
-        });
-
-        // פונקציה להתנתקות
-        document.getElementById('logout-button').addEventListener('click', () => {
-            auth.signOut().then(() => {
-                window.location.href = "index.html";
-            }).catch((error) => {
-                console.error("שגיאה בהתנתקות:", error);
-            });
-        });
     </script>
 </body>
 </html>
